--- a/index.html
+++ b/index.html
@@ -17,22 +17,6 @@
   <a href="cloud.html" class="bar-item">Cloud View</a>
 </div>
 
-<!--<nav class="sidebar" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="closeMenu" title="Close Menu">
-    <i class="fa fa-remove"></i>
-  </a>
-  <h4 class="bar-item"><b>Menu</b></h4>
-  <table id="idTable">
-        <tr>
-            <td>
-                <a> Project_ID </a>
-            </td>
-        </tr>
-    </table>
-  <a class="menu-item" href="index.html">Log View</a>
-  <a class="menu-item" href="cloud.html">CloudView</a>
-</nav>-->
-
 <div class="container" id="container">
 <div id = "dynamic" class="tab">
   <button class="tablinks" onclick="openCity(event, 'Default')" id="defaultOpen">Home</button>
@@ -43,110 +27,25 @@
 </div>
 </div>
 
-<!--<div class="w3-main" style="margin-left:250px">
-    <h1 id="logHeader" style="font-size:160%;"><b></b></h1>
-    <table id="dataLogTable">
-        <tr>
-            <th>
-                Tag
-            </th>
-            <th>
-                Value
-            </th>
-            <th>
-                Type
-            </th>
-            <th>
-                Last Accessed
-            </th>
-            <th>
-                Random
-            </th>
-        </tr>
-    </table> -->
+<p id="lastUpdated"></p>
 
-    <p id="lastUpdated"></p>
-
-    <script>
-        function openIDTable(evt, projectIDName) {
-        var i, tabcontent, tablinks;
-        tabcontent = document.getElementsByClassName("tabcontent");
-        for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
-        }
-        tablinks = document.getElementsByClassName("tablinks");
-        for (i = 0; i < tablinks.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" active", "");
-        }
-        document.getElementById(projectIDName).style.display = "block";
-        evt.currentTarget.className += " active";
-        }
-        // Get the element with id="defaultOpen" and click on it
-        document.getElementById("defaultOpen").click();
-    </script>
-    <script type="text/javascript">
-        var logFiles = [{"projectid":"Natalie@","tag":"High Score","value":12,"type":"Integer","updated":1489149847877}, 
-        {"projectid":"Natalie@","tag":"High Score","value":10,"type":"Integer","updated":1489143847222}, {"projectid":"Katherine@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}, {"projectid":"Jeff@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222},];
-        var tabs = document.getElementById("dynamic");
-        var seen = new Set();
-        // run through to set up and create all the tabs and tables
-        for (var i = 0; i < logFiles.length; i++) {
-            var logFile = logFiles[i];
-            var currentid = logFile.projectid;
-            if (!seen.has(currentid)){
-            var button = document.createElement('button');
-            button.setAttribute('class', 'tablinks');
-            button.setAttribute('onclick', "openIDTable(event, \'"+currentid+"\')");
-            //button.onclick = function(){openCity(event, currentid);}; // for IE
-            button.innerHTML = currentid;
-            tabs.appendChild(button);
-
-            var newDiv = document.createElement("div");
-            newDiv.id = currentid;
-            newDiv.setAttribute('class', 'tabcontent');
-            // This is so it doesn't show the table data by default
-            newDiv.setAttribute('style', "display: none;")
-            newDiv.innerHTML = "<h1 id=\"logHeader\" style=\"font-size:160%;\"><b>Log Table for ID: "+ currentid +"</b></h1>";
-
-            var table = document.createElement("table");
-            table.id = "logTable" + currentid;
-            var row = table.insertRow(0);
-                row.insertCell(0).outerHTML = "<th>Tag</th>";
-                row.insertCell(1).outerHTML = "<th>Value</th>";
-                row.insertCell(2).outerHTML = "<th>Type</th>";
-                row.insertCell(3).outerHTML = "<th>Last Accessed</th>";
-                row.insertCell(4).outerHTML = "<th>Random</th>"
-            newDiv.appendChild(table);
-            document.getElementById("container").appendChild(newDiv);
-            seen.add(currentid);}
-        }
-
-        var lastUpdated = 1508702040068; //##LASTUPDATED##;
-        var date = new Date();
-        date.setTime(lastUpdated);
-        document.getElementById('lastUpdated').innerHTML = 'Log was last updated ' + date;
-        logFiles.sort(function (a, b) {
-            return b.updated - a.updated;
-        });
-        //document.getElementById("logHeader").innerHTML = 'Log Table for ' + logFiles[0].projectid;
-        //var dataLogTable = document.getElementById("dataLogTable");
-        for (var i = 0; i < logFiles.length; i++) {
-            var logFile = logFiles[i];
-            var dataLogTable = document.getElementById("logTable" + logFile.projectid);
-            date.setTime(logFile.updated);
-            var row = dataLogTable.insertRow(-1);
-            var tagColumn = row.insertCell(0);
-            tagColumn.innerHTML = logFile.tag;
-            var valueColumn = row.insertCell(1);
-            valueColumn.innerHTML = logFile.value.toString();
-            var typeColumn = row.insertCell(2);
-            typeColumn.innerHTML = logFile.type;
-            typeColumn.setAttribute('class', logFile.type);
-            var dateColumn = row.insertCell(3);
-            dateColumn.innerHTML = date.toString();
-            var randomCell = row.insertCell(4);
-            randomCell.innerHTML = "Random";
-        };
-    </script>
+<script>
+    function openIDTable(evt, projectIDName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(projectIDName).style.display = "block";
+    evt.currentTarget.className += " active";
+    }
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+</script>
+<script type="text/javascript" src="./tableFormation.js"></script>
 </body>
 </html>
